<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color_green"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="3" >

    <android.support.v4.view.ViewPager
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/pager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="5dp"
        android:layout_weight="1.3"
        android:background="@color/main_color_green" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1.7"
        android:background="#FFFFFF"
        android:stretchColumns="*"
        android:weightSum="3" >

        <TableRow
            style="@style/SpringboardTableRow"
            android:layout_weight="1" >

            <LinearLayout
                android:id="@+id/collection_item"
                style="@style/SpringboardItemLayout"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:background="@color/main_color_green" >

                <TextView
                    android:id="@+id/textViewUI"
                    style="@style/SpringboardItemText"
                    android:text="@string/btnMainSW"
                    android:textSize="20sp" />
            </LinearLayout>
        </TableRow>

        <TableRow
            style="@style/SpringboardTableRow"
            android:layout_weight="2" >

            <LinearLayout
                android:id="@+id/heavy_rotation_item"
                style="@style/SpringboardItemLayout"
                android:layout_marginRight="2dp"
                android:background="@color/main_color_green"
                android:onClick="back" >

                <ImageView
                    style="@style/SpringboardItemImage"
                    android:src="@drawable/dvanaesti" />

                <TextView
                    style="@style/SpringboardItemText"
                    android:text="@string/btnBack" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/activity_item"
                style="@style/SpringboardItemLayout"
                android:background="@color/main_color_green"
                android:onClick="changeUserInterface" >

                <ImageView
                    style="@style/SpringboardItemImage"
                    android:src="@drawable/trineastii" />

                <TextView
                    style="@style/SpringboardItemText"
                    android:text="@string/btnSelect" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</LinearLayout>